--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -72,5 +72,13 @@
     }
     body {
       @apply bg-background text-foreground;
+
     }
   }
+
+   /* * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    outline: 3px solid blue !important;
+  }  */
