--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -75,3 +75,10 @@
 
     }
   }
+
+   /* * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    outline: 3px solid blue !important;
+  }  */
